--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -340,6 +340,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
+          channel: master
           flutter-version: ${{ env.FLUTTER_VERSION_ARM }}
           cache: true
       - name: Install Protoc
