--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -322,7 +322,7 @@ jobs:
           ./scripts/cleanup.sh "${{ steps.import_gpg.outputs.fingerprint }}" "."
 
   build-windows-arm64:
-    if: ${{ github.event_name == 'push' || inputs.build_windows_arm64 }}
+    if: false # ${{ github.event_name == 'push' || inputs.build_windows_arm64 }}
     runs-on: windows-11-arm
     needs: get-version
     steps:
@@ -643,13 +643,12 @@ jobs:
   upload:
     if: ${{ always() }}
     permissions: write-all
-    needs:
-      [
+    needs: [
         get-version,
         build-linux-x86_64,
         build-linux-arm64,
         build-windows-x86_64,
-        build-windows-arm64,
+        # build-windows-arm64,
         build-android,
       ]
     runs-on: ubuntu-22.04
