--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   timer_builder: ^2.0.0
   linkify: ^5.0.0
   flutter_svg: ^2.2.3
-  flutter_secure_storage: ^10.0.0-beta.5
+  flutter_secure_storage: 10.0.0
   avatar_plus: ^0.0.5
   intl: ^0.20.2
   firebase_core: ^4.2.1
