--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -5,6 +5,18 @@ plugins {
     id "com.google.gms.google-services"
 }
 
+// Fix duplicate tink classes issue (tink vs tink-android)
+// https://pub.dev/packages/unifiedpush#the-build-fails-because-of-duplicate-classes
+def tink = 'com.google.crypto.tink:tink-android:1.19.0'
+configurations.all {
+    resolutionStrategy {
+        force tink
+        dependencySubstitution {
+            substitute module('com.google.crypto.tink:tink') using module(tink)
+        }
+    }
+}
+
 def keystoreProperties = new Properties()
 def localProperties = new Properties()
 def keystorePropertiesFile = rootProject.file('key.properties')
