add unified push

--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -107,6 +107,7 @@ dependencies:
   unifiedpush_storage_interface: ^1.0.0
   unifiedpush_storage_shared_preferences: ^1.0.0
   unifiedpush_platform_interface: ^4.0.0
+  flutter_local_notifications: ^19.5.0
 
 dev_dependencies:
   flutter_test:
