--- a/packages/app/android/app/build.gradle
+++ b/packages/app/android/app/build.gradle
@@ -46,6 +46,7 @@ android {
         // Ensures Java 21 compatibility.
         sourceCompatibility JavaVersion.VERSION_21
         targetCompatibility JavaVersion.VERSION_21
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -112,5 +113,6 @@ android {
 }
 
 dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
     implementation 'com.google.android.material:material:1.12.0'
 }
