--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -298,6 +298,29 @@ jobs:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v2
+      - name: Install NASM for kunifiedpush
+        shell: pwsh
+        run: |
+          $nasmUrl = "https://www.nasm.us/pub/nasm/releasebuilds/3.01/win64/nasm-3.01-win64.zip"
+          $nasmZip = "$env:TEMP\nasm-3.01-win64.zip"
+          $nasmDir = "$env:TEMP\nasm-3.01"
+
+          Write-Host "Downloading NASM from $nasmUrl"
+          Invoke-WebRequest -Uri $nasmUrl -OutFile $nasmZip
+
+          Write-Host "Extracting NASM to $nasmDir"
+          Expand-Archive -Path $nasmZip -DestinationPath $nasmDir -Force
+
+          $nasmPath = "$nasmDir\nasm-3.01"
+          Write-Host "Adding NASM to PATH: $nasmPath"
+          echo "$nasmPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+          # Add to current session PATH for immediate use
+          $env:PATH = "$nasmPath;$env:PATH"
+
+          Write-Host "NASM installation completed"
+          Write-Host "Verifying NASM installation:"
+          & "$nasmPath\nasm.exe" -v
       - name: Build-Windows-APP
         working-directory: ./packages/app/
         run: |
@@ -364,6 +387,29 @@ jobs:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v2
+      - name: Install NASM for kunifiedpush
+        shell: pwsh
+        run: |
+          $nasmUrl = "https://www.nasm.us/pub/nasm/releasebuilds/3.01/win64/nasm-3.01-win64.zip"
+          $nasmZip = "$env:TEMP\nasm-3.01-win64.zip"
+          $nasmDir = "$env:TEMP\nasm-3.01"
+
+          Write-Host "Downloading NASM from $nasmUrl"
+          Invoke-WebRequest -Uri $nasmUrl -OutFile $nasmZip
+
+          Write-Host "Extracting NASM to $nasmDir"
+          Expand-Archive -Path $nasmZip -DestinationPath $nasmDir -Force
+
+          $nasmPath = "$nasmDir\nasm-3.01"
+          Write-Host "Adding NASM to PATH: $nasmPath"
+          echo "$nasmPath" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+          # Add to current session PATH for immediate use
+          $env:PATH = "$nasmPath;$env:PATH"
+
+          Write-Host "NASM installation completed"
+          Write-Host "Verifying NASM installation:"
+          & "$nasmPath\nasm.exe" -v
       - name: Build-Windows-APP
         working-directory: ./packages/app/
         run: |
