update version to 1.39.1+6490 and modify identity creation logic

--- a/packages/app/ios/Runner/Info.plist
+++ b/packages/app/ios/Runner/Info.plist
@@ -78,9 +78,7 @@
     <key>CFBundleVersion</key>
     <string>$(FLUTTER_BUILD_NUMBER)</string>
     <key>FirebaseMessagingAutoInitEnabled</key>
-    <true/>
-    <key>FirebaseAppDelegateProxyEnabled</key>
-    <true/>
+    <false/>
     <key>FlutterDeepLinkingEnabled</key>
     <false/>
     <key>ITSAppUsesNonExemptEncryption</key>
