--- a/packages/app/ios/Runner/Info.plist
+++ b/packages/app/ios/Runner/Info.plist
@@ -77,6 +77,8 @@
     </array>
     <key>CFBundleVersion</key>
     <string>$(FLUTTER_BUILD_NUMBER)</string>
+    <key>FirebaseAppDelegateProxyEnabled</key>
+    <false/>
     <key>FirebaseMessagingAutoInitEnabled</key>
     <false/>
     <key>FlutterDeepLinkingEnabled</key>
