--- a/packages/keychat_ecash/pubspec.yaml
+++ b/packages/keychat_ecash/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   timer_builder: ^2.0.0
   keychat: ^1.36.5
   keychat_rust_ffi_plugin: 1.0.0
+  keychat_nwc: 1.0.0
   flutter_easyloading: ^3.0.5
   easy_debounce: ^2.0.3
   get: ^4.7.2
