--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,6 +13,7 @@ analyzer:
     # invalid_annotation_target: warning
     # argument_type_not_assignable: warning
     unnecessary_statements: error
+    unnecessary_null_comparison: error
   exclude: [
       packages/**/*.g.dart
       build/**,
