--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -2,7 +2,7 @@ name: keychat
 description: Keychat is the super app for Bitcoiners. Autonomous IDs, Bitcoin ecash wallet, secure chat, and rich Mini Apps — all in Keychat.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.39.2+6492
+version: 1.39.2+6494
 
 environment:
   sdk: ">=3.9.0 <4.0.0"
@@ -62,6 +62,8 @@ dependencies:
   linkify: ^5.0.0
   flutter_svg: ^2.2.3
   flutter_secure_storage: ^10.0.0
+  # flutter_secure_storage:
+  #   path: ../../../flutter_secure_storage/flutter_secure_storage
   avatar_plus: ^0.0.5
   intl: ^0.20.2
   firebase_core: ^4.4.0
